# model-compression-demo

./: .gitignore  FEEDBACK_REPORT copy.md  Makefile  README.md  demo.py  index.html  pyproject.toml
compression_demo/: __init__.py  benchmarks.py  catalog.py  cli.py  evals.py  gpu_benchmarks.py  model_specs.py  planner.py  recipes.py
docs/: README.md  architecture.md  reports.md
examples/: bitsandbytes_runtime_loading.py  compare_perplexity.py  gptqmodel_quantize.py  llmcompressor_gptq_w4a16.py  representative_calibration.jsonl  vllm_quantization_benchmark.sh  vllm_serve_commands.sh
reports/: Qwen3-0.6B-W4A16-quality.json  gpu-benchmark-report.html  gpu-benchmark-results.json  qwen3-0.6b-w4a16-cal64-perplexity.json  qwen3-0.6b-w4a16-generation.json  qwen3-0.6b-w4a16-perplexity.json  qwen3-0.6b-w8a16-generation.json  qwen3-0.6b-w8a16-perplexity.json  rtx4090-fp8-comparison.html  rtx4090-fp8-comparison.json
tests/: test_cli.py  test_evals.py  test_gpu_benchmarks.py  test_model_specs.py  test_planner.py  test_project_metadata.py  test_recipes.py
