[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-compression-demo"
version = "0.1.0"
description = "Demo and guide for industry LLM model compression workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gpu = [
    "accelerate",
    "compressed-tensors",
    "datasets",
    "llmcompressor",
    "lm_eval",
    "torch",
    "transformers>=4.52.1",
    "vllm",
]
alternatives = [
    "bitsandbytes",
    "gptqmodel",
    "peft",
]
all = [
    "accelerate",
    "bitsandbytes",
    "compressed-tensors",
    "datasets",
    "gptqmodel",
    "llmcompressor",
    "lm_eval",
    "peft",
    "torch",
    "transformers>=4.52.1",
    "vllm",
]

[project.scripts]
compression-demo = "compression_demo.cli:main"
model-compression-demo = "compression_demo.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["compression_demo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
