[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-compression-demo"
version = "0.1.0"
description = "Demo and guide for industry LLM model compression workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
compression-demo = "compression_demo.cli:main"
model-compression-demo = "compression_demo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["compression_demo"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.model-compression-demo.runtime-stacks]
compression = [
    "accelerate",
    "compressed-tensors",
    "datasets",
    "llmcompressor",
    "lm_eval",
    "torch",
    "transformers>=4.52.1",
]
alternatives = [
    "bitsandbytes",
    "gptqmodel",
    "peft",
]
serving = [
    "vllm",
]
