[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-compression-demo"
version = "0.1.0"
description = "Demo and guide for industry LLM model compression workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
compression-demo = "compression_demo.cli:main"
model-compression-demo = "compression_demo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]
quality = [
    "accelerate",
    "compressed-tensors==0.10.2",
    "datasets",
    "lm_eval",
    "numpy<2",
    "pyarrow<21",
    "torch",
    "transformers==4.52.4",
]
compression = [
    "accelerate",
    "bitsandbytes",
    "compressed-tensors==0.10.2",
    "datasets",
    "fsspec==2023.6.0",
    "llmcompressor==0.6.0.1",
    "lm_eval",
    "numpy<2",
    "peft",
    "pyarrow<21",
    "torch",
    "transformers==4.52.4",
]

[tool.hatch.build.targets.wheel]
packages = ["compression_demo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.model-compression-demo.runtime-stacks]
quality = [
    "accelerate",
    "compressed-tensors==0.10.2",
    "datasets",
    "lm_eval",
    "numpy<2",
    "pyarrow<21",
    "torch",
    "transformers==4.52.4",
]
compression = [
    "accelerate",
    "bitsandbytes",
    "compressed-tensors==0.10.2",
    "datasets",
    "fsspec==2023.6.0",
    "llmcompressor==0.6.0.1",
    "lm_eval",
    "numpy<2",
    "peft",
    "pyarrow<21",
    "torch",
    "transformers==4.52.4",
]
serving = [
    "vllm==0.23.0",
]
